ui.frontend/src/main/webpack/etisalat/styles/edc-tabs.scss
.edc-tabs-wrapper {
    position: relative;
   // .tabs-title {
    //  z-index: 2;
    //  text-transform: uppercase;
    //}
  .swiper-container{
    padding: 0;
  }
  @include respond-to-max($tablet){
    .swiper-slide{
      display: flex;
      justify-content: center;
       font-size: $font18;
     }
  }
 
.container {
    margin-right: auto;
    margin-left: auto;
    padding-left: 12px;
    padding-right: 12px;
    @include respond-to-min($tablet){
      width: 756px;
    }
}
  
    .page-nav {
      .swiper-slide a,
      li {
        text-transform: uppercase;
      }
    }
    @include respond-to-max($desktop){
      .page-nav {
        .swiper-slide,
        li {
          display: flex;
            border-bottom: 2px solid transparent;
          
        }
        .swiper-slide {
          align-items: flex-end;
            border-bottom: 2px solid transparent;
          
        }
      }
      .hide-on-mobile {
        display: none;
      }
    }
    // swiper buttons
    .swiper-button-next,
    .swiper-button-prev {
      background-image: none;
      width: 24px;
      height: 24px;
      position: absolute;
      top: 60%;
      svg {
        width: 24px;
        height: 24px;
        g, path {
          stroke-width: 3px;
        }
      }
      @include respond-to-max($desktop){
        display: none;
      }
    }
    .swiper-button-next {
      right: -24px;
      @include respond-to-min($desktop-wide) {
        right: -50px;
      }
      svg{
        transform: translateY(0) rotate(-90deg);
      }
    }
    .swiper-button-prev {
      left: -24px;
      @include respond-to-min($desktop-wide)  {
        left: -50px;
      }
      svg{
        transform: translateY(0) rotate(90deg);
      }
    }
  
   
  }
   // with years
   .cmp_tabs__horizontal_with_years{
    .edc-tabs-wrapper {
      @include respond-to-min($desktop) {
      min-height: 68px;
      max-height: 68px;
      .page-nav {
        .swiper-slide,
        li {
          min-height: 68px;
            height: 68px;
            font-size: $font16;
            letter-spacing: 0.6px;
            line-height: 68px;
        }
      }
      .swiper-button-next, .swiper-button-prev {
        top: 65%;
      }
    }
  }
}
 
  
  //arabic
  *[lang="ar"] {
    *[dir="rtl"] {
      .edc-tabs-wrapper {
        .page-nav li {
          padding-left: 1.4rem;
          padding-right: 0;
        }
      }
    }
  }
  
  
 
  
  .edc-tabs-wrapper {
    background: $white;
    min-height: 56px;
    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1);
    transition: all 0.25s ease-in-out;
    max-height: 78px;
    position: relative;
    z-index: 8;
    @include font-family-lato;
    //>.container>.row>.col-xs-12.col-md-3 {
    //  display: none;
    //  @media (min-width: 1366px) {
    //    display: block;
    //  }
    //}
    @include respond-to-min($desktop) {
      min-height: 90px;
      max-height: 90px;
      @include font-family-Neotech;
  
      &.tabs {
        //max-height: none;
        background: $white;
        min-height: 56px;
        box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1);
        transition: all .25s ease-in-out;
        max-height: 78px;
        position: relative;
        z-index: 8;
        @include respond-to-min($desktop) {
          min-height: 90px;
          max-height: 90px;
          &.tabs {
            max-height: none;
          }
        }
      }
    }
    .nav-tabs {
      border: 0;
      > li {
          border: 0;
          border-bottom: 4px solid transparent;
      }
        &:hover {
          border-color: #fff;
        }
      
    }
  
    .page-nav {
      display: flex;
      align-items: flex-end;
      min-height: 56px;
      height: 56px;
      margin-bottom: 0;
      @include respond-to-min($desktop)  {
       // display: block;
        height: auto;
      }
  
      //overflow-x: auto;
      white-space: nowrap;
      
  
      ::-webkit-scrollbar {
        display: none;
      }
  
      .swiper-slide,
      li {
       
        width: auto ;
      
  
        //min-height: 56px;
        @include respond-to-min($tablet){
          min-height: 90px;
        }
          padding: 0 1rem;
          font-size: $font12;
          padding-bottom: 10px;
          color: $almost-black;
          cursor: pointer;
          letter-spacing: 0.25px;
          text-transform: uppercase;
  
         @include respond-to-min($desktop){
            padding: 0 1.5rem;
            line-height: 90px;
            height: 90px;
            @include font-family-Neotech;
            font-size: $font20;
            text-transform: none;
          }

          &:hover {
            color:  $main-green;
          }
        
  
        &.cmp-tabs__tab--active{
            border-bottom: 2px solid  $main-green;
            border-left: 0;
            border-right: 0;
            border-top: 0;
            color: $main-green;
  
            @include respond-to-min($tablet){
              border-bottom: 4px solid $main-green;
              color:  $main-green;
            }
          
        }
      }
      li {
        padding-right: 1.4rem;
      }
    }
  
    .config-section-main-label-top {
      color: $gray;
      font-size: $font12;
      margin: 0;
      position: relative;
      margin-top: -10px;
      margin-bottom: 10px;
      top: 20px;
      line-height: 22px;
      letter-spacing: 1px;
      @include font-family-lato;

      @include respond-to-min($desktop) {
        display: flex;
        align-items: center;
        font-size: $font18;
        line-height: 20px;
       height: 90px;
        margin: 0;
        top: 0;
      }
    }
    .config-section-wrap .page-nav li, .edc-tabs-wrapper .page-nav li {
      padding-right: 1.4rem;
  }
  }
  //tab-panel content
  
    .media-cta-wrapper{
      display:inherit;
        flex-direction: inherit;
    @include respond-to-max($tablet){
      .aem-Grid {
        display:inherit;
        flex-direction: inherit;
      }
    }

      .cmp-text{
        padding-left: 24px;
      }
      p+p{
        margin-top: 0;
      }

    }
  
  //tab panel with carosal
  .cmp-tabs__tabpanel{
    
    .cmp-carousel__actions{
      button{
        border: 0px solid transparent;
        background-color: transparent;
        &:focus{
          background-color: transparent;
         }
      }
    
      
  }
  .cmp-carousel__actions{
    position: absolute;
    bottom: 12rem;
    right: 71rem;
  }
  .cmp-carousel__action-text {
		display: none;
	}
  .cmp-carousel__indicators {
		display: none;
	}
  .cmp-carousel__action
  {
    &--previous::after,
	 &--next::after {
		content: "";
		position: absolute;
		top: 15px;
		z-index: 11;
		display: block;
		width: 11px;
		height: 11px;
    border-bottom: 1px solid  $grey4;
    border-right: 1px solid  $grey4;
	}
 &--previous::after {
		left: 2rem;
		transform: rotate(-45deg);
	}
 &--next::after {
		right: 1.2rem;
		transform: rotate(135deg);
	}
  }
}
  *[lang=ar] {
    *[dir=rtl] {
      .edc-tabs-wrapper{
        .ul-list-cms ul li:before {
         display: none;
        }
      }
    }
  }

